--- a/workflow/notebooks/draft.Rmd
+++ b/workflow/notebooks/draft.Rmd
@@ -30,6 +30,7 @@ library(patchwork)
 library(ggtree)
 library(cowplot)
 library(glue)
+library(ggh4x)
 source("workflow/scripts/functions.R")
 theme_set(theme_classic(base_family = "Helvetica"))
 
@@ -162,39 +163,6 @@ df %>%
 df_filt %>% 
   group_by(singleton) %>% 
   summarise(n(), n()/nrow(df_filt))
-
-# blast_filtered <- filter(blast, 
-#                          query %in% paste0("AF-", aln_seeds, "-F1"),
-#                          length/qlen*100>params$coverage, 
-#                          length/slen*100>params$coverage,
-#                          evalue<as.numeric(params$eval_both)) %>% 
-#   group_by(query) %>% 
-#   slice_head(n = params$max_seqs) %>% 
-#   ungroup()
-# 
-# fs_filtered <- filter(fs, 
-#                       query %in% paste0("AF-", aln_seeds, "-F1"),
-#                       qcov*100>params$coverage, 
-#                       tcov*100>params$coverage, 
-#                       evalue<as.numeric(params$eval_both)) %>% 
-#   group_by(query) %>% 
-#   slice_head(n = params$max_seqs) %>% 
-#   ungroup()
-# 
-# df_filtered <- full_join(blast_filtered, fs_filtered,
-#                 by = c("query", "target"), suffix=c("_Blast", "_Foldseek")) %>%
-#     filter(query!=target) %>% 
-#   left_join(self, by="query") %>%
-#   mutate(pident_Foldseek = 100*pident_Foldseek, 
-#          qcov_Foldseek = 100*qcov_Foldseek,
-#          singleton = case_when(is.na(evalue_Foldseek) ~ "only Blast",
-#                                is.na(evalue_Blast) ~ "only Foldseek", 
-#                                .default = "Common"))
-
-# seed_fa <- Biostrings::readAAStringSet("results/data/fastas/UP000005640.fa")
-# length_df <- Biostrings::width(seed_fa)
-# names(length_df) <- names(seed_fa)
-
 ```
 
 
@@ -226,44 +194,6 @@ ortho_dbs <- read_delim(paste0(params$data_dir, "ids/", tax$Proteome_ID, "_ids.t
   select(-proteome, -Entry)
 
 ortho_dbs <- full_join(CATH_df, ortho_dbs)
-
-# ortho_dbs %>% 
-#   left_join(taxmap, by=c("target"="label")) %>% 
-#   group_by(mnemo) %>% 
-#   summarise_all(~ sum(is.na(.))/nrow(ortho_dbs)) %>% 
-#   filter(!is.na(mnemo)) %>% 
-#   select(-target) %>% 
-#   pivot_longer(!mnemo) %>% 
-#   ggplot(aes(name, value)) + 
-#   geom_boxplot() + 
-#   labs(x="DB", y="% NA")
-
-# nms <- read_delim("resources/cath-names.txt", 
-#                   comment = "#", delim = "    ",
-#                   col_names = c("Gene3D", "abbr", "name"), 
-#                   show_col_types = FALSE) %>% 
-#   select(-abbr) %>% 
-#   mutate(name=gsub("^:", "", name))
-# 
-# nms_pfam <- read_delim("resources/Pfam-A.clans.tsv", 
-#            col_names = c("Pfam", "clan", "boh", "abbr", "name"), 
-#            show_col_types = FALSE) %>% 
-#   select(-name, -clan, -boh)
-# 
-# long_CATH_df <- CATH_df %>% 
-#   # filter(target %in% unique(blast$query)) %>% 
-#   mutate(Gene3D=strsplit(Gene3D, ";")) %>% 
-#   unnest(Gene3D) %>% 
-#   separate(col = Gene3D, into = c("C", "A", "T", "H"), sep = "\\.", remove = FALSE) %>% 
-#   mutate(CA = paste(C,A,sep = "."), CAT=paste(C,A,T,sep = ".")) %>% 
-#   left_join(nms, by=c("C"="Gene3D")) %>%  
-#   left_join(nms, by=c("CA"="Gene3D"), suffix = c("_C", "_CA")) %>% 
-#   left_join(nms, by=c("CAT"="Gene3D"), suffix = c("_CA", "_CAT")) %>% 
-#   left_join(nms, by=c("Gene3D"), suffix = c("_CAT", "_CATH"))
-# 
-# long_CATH_nms <- long_CATH_df %>%
-#     select(-c(Entry, Pfam, n_Pfam_domains, target, n_3d_domains)) %>% 
-#     distinct()
 ```
 
 ## Fig1
@@ -285,9 +215,6 @@ fig1a <- df %>%
                              .default = singleton)) %>%
   ggplot(aes(singleton, n, fill=singleton)) +
   geom_bar(aes(alpha=Filtering), stat = "identity", position = position_dodge2(reverse=TRUE)) +
-  # geom_text(aes(group=Filtering, label=paste0(round(prop, 2)*100, "%")),
-  #           position = position_dodge2(reverse = TRUE, width = 0.9),
-  #           vjust=1.3, color="white", size=3) +
   scale_fill_manual(values = palette_singleton_s, guide="none") +
   scale_alpha_manual(values = c(1,.6)) +
   scale_y_continuous(expand = c(0,0), labels = scales::label_number(scale = 1e-6)) +
@@ -316,8 +243,6 @@ eval_p <- ggplot(df, aes(-log10(evalue_Blast), -log10(evalue_Foldseek))) +
   stat_bin_2d(breaks=seq(0,20,0.4)) + 
   scale_fill_gradientn(colors=wespal) +
   ggpubr::stat_cor(label.x.npc = .025) +
-  # geom_hline(yintercept = -log10(evals), linetype=2) + 
-  # geom_vline(xintercept = -log10(evals), linetype=2) + 
   coord_cartesian(expand = 0) +
   labs(x="-log10(Evalue BlastP)",y="-log10(Evalue Foldseek)") +
   scale_x_continuous(limits = c(0, 20)) +
@@ -332,7 +257,6 @@ pident_p <- ggplot(df, aes(pident_Blast, pident_Foldseek)) +
   stat_bin_2d(breaks=seq(0,100,2)) + 
   scale_fill_gradientn(colors=wespal) +
   ggpubr::stat_cor(label.x.npc = .025) +
-  # scale_fill_viridis_c(option = "C") +
   coord_cartesian(expand = 0) +
   scale_x_continuous(limits = c(0, 100)) +
   scale_y_continuous(limits = c(0, 100)) +
@@ -344,8 +268,6 @@ pident_p <- add_marginal(df, pident_p, "pident_Blast", "pident_Foldseek", "singl
 qcov_p <- ggplot(df, aes(qcov_Blast, qcov_Foldseek)) + 
   stat_bin_2d(breaks=seq(0,100,2)) + 
   ggpubr::stat_cor(label.x.npc = .025) +
-  # geom_hline(yintercept = min_covs, linetype=2) + 
-  # geom_vline(xintercept = min_covs, linetype=2) + 
   scale_x_continuous(limits = c(0, 100)) +
   scale_y_continuous(limits = c(0, 100)) +
   labs(x="Query cov. BlastP",y="Query cov. Foldseek") +
@@ -371,7 +293,6 @@ alntmscore_p <- df %>%
   select(alntmscore, singleton) %>% 
   ggplot(aes(color=singleton, alntmscore)) + 
   geom_density() + 
-  # coord_cartesian(expand = 0) +
   scale_y_continuous(expand = expansion(c(0.02,0.02))) +
   scale_x_continuous(limits = c(0, 1), 
                      expand = expansion(c(0.02,0.02))) +
@@ -509,7 +430,7 @@ p_dbs <- ggplot(jaccard_df, aes(avg_Jaccard, 1, color=singleton, alpha=db)) +
 fig2_first_row <- (pident_p | eval_p | qcov_p)
 fig2_second_row <- ((lddt_p / alntmscore_p / plddt_p) | p_dbs) + 
   plot_layout(guides = "collect") & 
-  theme(legend.position = 'bottom')
+  theme(legend.position = 'top')
 fig2 <- (fig2_first_row / fig2_second_row) +
   plot_layout(heights = c(1,1.3)) +
   plot_annotation(tag_levels = 'A') &
@@ -523,17 +444,18 @@ ggsave("draft/figures/Fig2.pdf", fig2, width = 8, height = 7, device = cairo_pdf
 
 
 ```{r read_trees}
-glue("results/phylogeny/", params_dataset$phylo_dataset,"/trees/", params_dataset$seed, "_unrooted_trees.txt")
-
-df_trees <- read_delim("results/old/test/trees/UP000005640_unrooted_trees.txt",
+models_draft <- setdiff(models, c("QT", "FTPY", "AF", "LLM"))
+df_trees <- read_delim("test/flashforward/out/unrooted_trees.txt",
                        show_col_types = FALSE,
                        col_names = c("gene", "target", "alphabet", "model", "tree")) %>% 
-  mutate(model=factor(model, levels=models))  
-  # filter(model!="FTPY")
+  mutate(model=factor(model, levels=models)) %>% 
+  filter(!is.na(tree), model %in% models_draft) %>% 
+  # some FM trees have negative branch lengths
+  mutate(tree = gsub(":-", ":", tree)) 
+# 722*8*4=23104 trees
 
 # ML trees with selected model and LL
-glue("results/phylogeny/", params_dataset$phylo_dataset,"/trees/", params_dataset$seed, "_mltrees.txt")
-df_ml <- read_delim("results/old/test/trees/UP000005640_mltrees.txt", 
+df_ml <- read_delim("draft/mltrees.txt", 
                     delim = "\t", 
                     show_col_types=FALSE) %>% 
   # mutate(fn=gsub("_mltrees.txt", "", basename(fn))) %>% 
@@ -543,160 +465,133 @@ df_ml <- read_delim("results/old/test/trees/UP000005640_mltrees.txt",
                                 gsub("\\+.*", "", Model))), levels=models), 
          rate=sub("\\+", "", gsub("GTR20|3DI|LG", "", Model)))
 
-glue("results/phylogeny/", params_dataset$phylo_dataset, "/reco/disco")
-
-disco_fls <- list.files("results/old/test/reco/disco/", pattern = "output.nwk", full.names = T)
-
-disco_rf <- NULL
-for (file in disco_fls){
-  a <- read.tree(file)
-  rf <- TreeDist::RobinsonFoulds(sptree, a, normalize = T)
-  ntips <- sapply(a, function(x) length(x$tip.label))
-  disco_rf <- bind_rows(disco_rf, 
-                        tibble(ntips=ntips, rf=rf, bn=rep(basename(file), length(rf))))
-}
-
+disco_fls <- list.files("test/flashforward/reco/", pattern = "^disco", full.names = T)
 
 # Read all trees
 ts <- read.tree(text = df_trees$tree)
 names(ts) <- paste(df_trees$gene, df_trees$target, df_trees$alphabet, df_trees$model, sep = "_")
 
-# Compare trees with RF distance
-rf_df <- filter(df_trees, target=="common") %>% 
-  select(-alphabet) %>% 
-  inner_join(x=., y = ., by = c("gene", "target")) %>%
-  filter(!is.na(tree.x), !is.na(tree.y)) %>%
-  rowwise() %>%
-  mutate(RF = phangorn::RF.dist(normalize = TRUE, 
-                                read.tree(text = tree.x), read.tree(text=tree.y)),
-         n_tips = length(read.tree(text = tree.x)$tip.label)) %>%
-  select(-tree.x, -tree.y)
-
-rf_text <- group_by(rf_df, model.x, model.y) %>% 
-  # filter(as.integer(model.x)<=as.integer(model.y)) %>% 
-  summarise(value=median(RF, na.rm=T))
-
-# get BS distribution
-df_bs <- fortify(ts) %>%
-  filter(!isTip) %>%
-  mutate(support=as.numeric(label)) %>%
-  separate(.id, c("gene", "target", "alphabet", "model")) %>%
-  filter(model!="QT") %>% 
-  filter(!is.na(support)) %>% 
-  select(gene, target, model, support)
+disco_rf <- get_disco_rf(disco_fls, sptree)
+df_bs <- get_bs_df(ts)
 
 n_tips <- sapply(ts, function(x) length(x$tip.label)) %>% 
   enframe() %>%
-  separate(name, c("gene", "target", "alphabet", "model")) %>%
+  separate(name, c("gene", "target", "alphabet", "model"), sep = "_") %>%
   rename("n_tips"="value")
 
-n_sps <- sapply(ts, function(x) 
-  length(unique(taxidmap[taxidmap$target %in% x$tip.label, ]$Tax_ID))) %>% 
+var_df <- sapply(ts, function(x) { 
+                 a <- phytools::midpoint_root(x) 
+                 var(ape::dist.nodes(a)[a$edge[1,][1],1:length(a$tip.label)])
+                 }) %>% 
   enframe() %>%
-  separate(name, c("gene", "target", "alphabet", "model")) %>%
-  rename("n_sps"="value")
-
-var_df <- sapply(ts, function(x)
-  var(adephylo::distRoot(phytools::midpoint_root(x)))) %>% 
-  enframe() %>%
-  separate(name, c("gene", "target", "alphabet", "model")) %>%
+  separate(name, c("gene", "target", "alphabet", "model"), sep="_") %>%
   rename("variance_r2t"="value")
 
 # Reconciliation ranger+TCS scores
-glue("results/phylogeny/", params_dataset$phylo_dataset, "/reco/", params_dataset$seed, "_notung.tsv")
-reco <- read_delim("results/old/test/reco/UP000005640_notung.tsv", 
-                   show_col_types = FALSE, col_names = c("gene", "dups", "losses")) %>% 
-  separate(gene, c("gene", "target", "alphabet", "model")) %>% 
-  left_join(var_df) %>% 
+# glue("results/phylogeny/", params_dataset$phylo_dataset, "/reco/", params_dataset$seed, "_notung.tsv")
+reco <- read_delim("test/flashforward/out/notung.txt", 
+                   show_col_types = FALSE, 
+                   col_names = c("gene", "target", "alphabet", "model", "dups", "losses")) %>% 
   left_join(n_tips) %>% 
-  left_join(n_sps) %>% 
+  left_join(var_df) %>% 
   mutate(model=factor(model, levels=models),
          n_events = (dups+losses)/n_tips) %>% 
+  filter(model %in% models_draft) %>% 
   rename("targets"="target")
 ```
 
 
 ```{r fig3}
+xax <- ifelse(df_model$algorithm=="Dist.", "italic", "plain")
 
 plot_DL <- reco %>% 
-  filter(model!="FTPY") %>% 
-  ggplot(aes(model, n_events, fill=targets)) +
-  geom_boxplot(outlier.size = .1) +
+  left_join(df_model) %>% 
+  ggplot(aes(weave_factors(model, data), n_events, 
+             color=algorithm, fill=targets)) + 
   labs(y="(D+L)/# Tips", x="",fill="Target sets") +
-  # ggthemes::scale_fill_solarized() +
+  geom_boxplot(outlier.size = .1) +
+  scale_color_manual(values = c("black", "black"),
+                     labels = c("ML", expression(italic("Dist.")))) +
+  guides(x = "axis_nested", 
+         colour=guide_legend(title = "Method", override.aes=list(linetype = 0, size=0))) +
   scale_fill_manual(values = palettes_method) +
-  theme(legend.position = "none")
+    theme(
+    axis.text.x = element_text(face = xax),
+    ggh4x.axis.nestline.x = element_line(color="grey"),
+    ggh4x.axis.nesttext.x = element_text(colour = "grey30", 
+                                         face = "bold", size=10)
+  )
+
 
 plot_rf <- disco_rf %>% 
-  filter(ntips>10) %>% 
-  separate(bn, c("seed", "targets", "alphabet", "model")) %>% 
   mutate(model=factor(model, levels=models)) %>% 
-  ggplot(aes(model, rf, fill=targets)) + 
-  geom_boxplot() +
+  filter(nsps>length(sptree$tip.label)/2) %>%
+  # separate(bn, c("seed", "targets", "alphabet", "model")) %>% 
+  left_join(df_model) %>% 
+  ggplot(aes(weave_factors(model, data), rf, 
+             color=algorithm, fill=target)) + 
+  labs(x="", y="Norm. RF to species tree", fill="Target sets") +
+  geom_boxplot(outlier.size = .1) +
+  scale_color_manual(values = c("black", "black"),
+                     labels = c("ML", expression(italic("Dist.")))) +
+  guides(x = "axis_nested", 
+         colour=guide_legend(title = "Method", override.aes=list(linetype = 0, size=0))) +
   scale_fill_manual(values = palettes_method) +
-  labs(x="", y="Norm. RF to species tree", fill="Target sets")
+    theme(
+    axis.text.x = element_text(face = xax),
+    ggh4x.axis.nestline.x = element_line(color="grey"),
+    ggh4x.axis.nesttext.x = element_text(colour = "grey30", 
+                                         face = "bold", size=10)
+  )
 
-
-nodes_clades <- fortify(sptree) %>% 
-  # filter(!isTip) %>% 
-  mutate(ordered = rank(y)) %>% 
-  mutate(label_int = fct_reorder(label, y)) %>%
-  select(label_int, ordered)
-
-apro_files <- list.files("results/old/test/reco/", 
-                         pattern = "*support.nwk", full.names = TRUE)
+apro_files <- list.files("test/flashforward/reco/", 
+                         pattern = "^apro*", full.names = TRUE)
 
 apro_trees <- read.tree(text = sapply(apro_files, readLines))
 names(apro_trees) <- sapply(str_split(basename(apro_files), "_"), 
                             function(x) paste0(x[2], "_", x[4]))
 
-trees_df <- fortify(apro_trees) 
-nodes_df <- trees_df %>% 
-  group_by(.id) %>% 
-  mutate(ordered = rank(y)) %>% 
-  left_join(nodes_clades) %>% 
-  separate(.id, c("targets", "model")) %>% 
-  filter(!isTip, label!="") %>% 
-  mutate(label = gsub("\\[|\\]|\\'", "", str_replace_all(label, "[a-z]{1,2}[0-9]=", ""))) %>% 
-  separate(label, c("pp1", "pp2", "pp3", "f1", "f2", "f3", "q1", "q2", "q3"), 
-           ";", convert = TRUE) %>% 
-  mutate(freq=f1+f2+f3, 
-         model=factor(model, levels=models))
+trees_df <- get_apro_stats(apro_trees) 
 
-plot_apro <- nodes_df %>%
-    filter(model!="FTPY") %>% 
-  ggplot(aes(model, q1, fill=targets)) + 
-  geom_boxplot() + 
+plot_apro <- trees_df %>% 
+  left_join(df_model) %>% 
+  ggplot(aes(weave_factors(model, data), q1, 
+             color=algorithm,fill=targets)) + 
+  labs(x="", y="Quartet support", fill="Target sets") + 
+  geom_boxplot(outlier.size = .1) +
+  scale_color_manual(values = c("black", "black"),
+                     labels = c("ML", expression(italic("Dist.")))) +
+  guides(x = "axis_nested", 
+         colour=guide_legend(title = "Method", override.aes=list(linetype = 0, size=0))) +
   scale_fill_manual(values = palettes_method) +
-  labs(x="", y="Quartet support", fill="Target sets")
-
-# firstrow <- (plot_rf + plot_DL + 
-#     plot_layout(guides = "collect"))
-# 
-# secondrow <- ( + 
-#     plot_layout(guides = "collect", widths = c(1,2)))
+    theme(
+    axis.text.x = element_text(face = xax),
+    ggh4x.axis.nestline.x = element_line(color="grey"),
+    ggh4x.axis.nesttext.x = element_text(colour = "grey30", 
+                                         face = "bold", size=10)
+  )
 
 fig3 <- plot_rf + plot_apro + plot_DL +
   plot_layout(guides = "collect") +
   plot_annotation(tag_levels = "A") & 
   theme(plot.tag = element_text(size = 10, face = "bold", family = "Helvetica"),
-        legend.position = "bottom")
+        legend.position="bottom",
+        legend.margin=margin(0,0,0,0),
+        legend.box.margin=margin(-25,0,-10,0)) 
 
-ggsave("draft/figures/fig3.pdf", fig3, width = 10, height = 4)
-# reco_rnkgs_plot <- reco %>% 
-#   group_by(gene, target) %>% 
-#   slice_min(n_events, with_ties = T) %>% 
-#   group_by(target, model) %>% 
-#   count() %>% 
-#   ggplot(aes(target, n, fill=model)) + 
-#   geom_bar(stat = "identity") +
-#   geom_text(aes(label=n), position = position_stack()) +
-#   scale_fill_manual(values = palettes_model)
+ggsave("draft/figures/Fig3.pdf", fig3, width = 9, height = 2.8, device = cairo_pdf)
 ```
 
 
 ```{r FigS1}
+# Compare trees with RF distance
+rf_df <- get_rf_df(df_trees)
+rf_text <- group_by(rf_df, model.x, model.y) %>% 
+  # filter(as.integer(model.x)<=as.integer(model.y)) %>% 
+  summarise(value=mean(RF, na.rm=T))
+
 plot_bs <- df_bs %>% 
+  filter(model!="FM") %>% 
   mutate(targets=target,
          model=factor(model, levels=models)) %>% 
   ggplot(aes(model, support, fill=targets)) +
@@ -707,11 +602,11 @@ plot_bs <- df_bs %>%
   theme(legend.position = "bottom")
 
 var_r2t <- reco %>% 
-  filter(model!="FTPY", targets=="common") %>% 
-  ggplot(aes(variance_r2t, model)) +
+  filter(targets=="common", model %in% models_draft) %>% 
+  ggplot(aes(variance_r2t, fct_reorder(model, variance_r2t))) +
   geom_violin(scale = "width", color="black", fill="grey40") +
   scale_x_continuous(limits = c(0,.5), expand = expansion(mult=0, add = c(0,0.05))) +
-  labs(x="Variance Root-to-tip distance") +
+  labs(x="Variance Root-to-tip distance", y="") +
   # scale_fill_manual(values = palettes_model) +
   theme(legend.position = 'none',
         legend.margin=margin(0,0,0,0),
@@ -722,43 +617,31 @@ rf_plot <- rf_text %>%
   geom_tile(aes( fill=value)) +
   geom_text(aes(label=round(value, 2)), color="white") +
   scale_fill_distiller(palette="YlGnBu", direction = -1, limits = c(0,1), 
-                       name="Median RF") + 
-  labs(x="Median RF Distance", y="") +
+                       name="Mean RF") + 
+  labs(x="Mean RF Distance", y="") +
   theme_classic() +
   theme(legend.position = "none", 
         axis.line = element_blank(),
         axis.ticks = element_blank())
 
-df_red <- select(df_filt, query, target, singleton) 
+union_trees <- df_trees %>% 
+  filter(target=="union", model %in% models_draft)
+df_dist <- distance_to_seed(union_trees) 
 
-res <- NULL
-for (idx in 1:nrow(df_trees)){
-  t <- ts[[idx]]
-  seed <-  t$tip.label[grepl(df_trees$gene[idx], t$tip.label)]
-  nn <- as.matrix(adephylo::distTips(t, method = "nNodes"))[seed, ]
-  max_dist <- max(nn)
-
-  row <- enframe(nn, name = "target", value="nn_dist") %>% 
-    mutate(query=seed, 
-           max_dist=max_dist,
-           targets=df_trees$target[idx],
-           alphabet=df_trees$alphabet[idx],
-           model=df_trees$model[idx]) %>% 
-    left_join(df_red, by=c("query", "target"))
-  res <- bind_rows(res, row)
-}
-
-# for what this should be grouped?
-plot_dist <- res %>% 
-  filter(query!=target) %>% 
+plot_dist <- df_dist %>% 
+  left_join(select(df_filt, query, target, singleton), 
+            by = c("query", "target")) %>%
+  filter(query!=target, !is.na(singleton)) %>% 
+  group_by(query) %>% 
+  mutate(max_dist = max(nn_dist)) %>% 
   group_by(query, singleton, model) %>%
   summarise(median_dist=median(nn_dist/max_dist), n=n()) %>% 
   ggplot(aes(median_dist, model,  fill=singleton)) + 
-  ggdist::stat_halfeye(alpha=.8, point_colour = NA, .width = 0, height=.6, 
-                       position = position_nudge(y=.15)) +
+  # ggdist::stat_halfeye(alpha=.8, point_colour = NA, .width = 0, height=.6, 
+  #                      position = position_nudge(y=.15)) +
   geom_boxplot(
-    width=.2,
-    position = position_dodge(),
+    # width=.2,
+    # position = position_dodge(),
     # removing outliers
     outlier.color = NA,
     alpha = 1,
@@ -777,7 +660,8 @@ fig_s1 <- ((plot_bs / rf_plot) +
   plot_layout(widths = c(1, 2)) +
   plot_annotation(tag_levels = 'A') & 
   theme(plot.tag = element_text(size = 10, face = "bold", family = "Helvetica"))
-ggsave("draft/figures/figS1.pdf", fig_s1, width = 10, height = 6)
+
+ggsave("draft/figures/Fig_S1.pdf", fig_s1, width = 10, height = 6)
 ```
 
 ```{r FigS2}
@@ -867,5 +751,24 @@ overlap_df %>%
   pivot_wider(names_from = is_not0, values_from = n) %>% 
   mutate(proportion = `TRUE`/(`FALSE`+`TRUE`)*100)
 
+```
+
+### Heteroscedascity of DL normalization
+
+```{r}
+lm <- lm(dups+losses ~ n_tips, data = reco)
+reco$res <- lm$residuals
+
+tmp_plot <- ggplot(reco, aes(y = res, x = n_tips, fill=target)) + 
+  geom_point(pch=21) +
+  facet_wrap(~target) + 
+  geom_abline(slope = 0) + 
+  scale_fill_manual(values = palettes_method) + 
+  labs(x="Num. of Tips", 
+       y="Residuals of: D+L ~ Num. of Tips") + 
+  theme(legend.position = "none")
+
+ggsave("draft/figures/review_hetero_TMP.png", tmp_plot,
+       width = 4, height = 3)
 ```
 
